--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
   </head>
 <body>
 	<app-root></app-root>
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ 	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 	<script type="text/javascript" src="./assets/js/app.js"></script>
 </body>
 </html>
